fix: style - letter-spacing

--- a/style.css
+++ b/style.css
@@ -61,5 +61,5 @@ body {
 
 .table td {
 	line-height: 1.2;
-	letter-spacing: -3px;
+	letter-spacing: -2px;
 }
